# MinuteMate

./: README.md
minute_mate/: README.md  pyproject.toml  requirements.txt
minute_mate/src/minute_mate/: main.py
minute_mate/src/minute_mate/crews/gmail_crew/: gmail_crew.py
minute_mate/src/minute_mate/crews/gmail_crew/tools/: gmail_tool.py
minute_mate/src/minute_mate/crews/meeting_minutes_crew/: meeting_minutes_crew.py
minute_mate/src/minute_mate/crews/meeting_minutes_crew/config/: tasks.yaml
